data/derived/sp14/progs/unify/prog4634.ml.out
Characters 25-26:
  let _ = eval (Sine(VarX),0,1);;
                           ^
Error: This expression has type int but an expression was expected of type
         float
